--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,37 +32,71 @@
             android:fontFamily="@font/noto_sans_regular"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:text="SNS 계정으로 간편하게 로그인/가입하기"
+            android:text="로그인을 해주세요."
             android:textColor="@color/theme_sub_color"
             android:textSize="14dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/btn_facebook_login"
+        <EditText
+            android:id="@+id/email_edit"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginHorizontal="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/btn_signin_facebook"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
             android:fontFamily="@font/noto_sans_regular"
-            android:text="Facebook 로그인"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="14dp" />
+            android:hint="Email Input"
+            android:includeFontPadding="false"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/password_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:fontFamily="@font/noto_sans_regular"
+            android:hint="Password Input"
+            android:includeFontPadding="false"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/info_state_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/noto_sans_regular"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:textColor="#C6615A"
+            android:visibility="invisible"
+            tools:text="*다시 입력해주세요." />
 
         <Button
-            android:id="@+id/btn_google_login"
+            android:id="@+id/login_btn"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginHorizontal="50dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/btn_signin_google"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/theme_sub_color"
             android:fontFamily="@font/noto_sans_regular"
-            android:text="Google 로그인"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="14dp" />
+            android:text="로그인"
+            android:textColor="@color/theme_color"
+            android:textSize="15dp" />
+
+
+        <Button
+            android:id="@+id/join_btn"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="10dp"
+            android:background="#999999"
+            android:fontFamily="@font/noto_sans_regular"
+            android:text="회원가입"
+            android:textColor="@color/theme_color"
+            android:textSize="15dp" />
 
         <View
             android:layout_width="match_parent"
