--- a/app/src/main/res/layout/layout_clothes_list.xml
+++ b/app/src/main/res/layout/layout_clothes_list.xml
@@ -28,6 +28,7 @@
         app:layout_constraintTop_toTopOf="@id/clothes_name" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/clothes_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
