--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/myDataFragment"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/menu_home"
         android:title="홈" />
 
     <item
-        android:id="@+id/recipeFragment"
+        android:id="@+id/settingFragment"
         android:icon="@drawable/menu_user"
         android:title="계정" />
 
