my clothes write

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -87,7 +87,7 @@
                 <LinearLayout
                     android:id="@+id/clothes_list_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="match_parent"
                     android:layout_marginHorizontal="15dp"
                     android:layout_marginTop="30dp"
                     android:orientation="vertical"
