--- a/app/src/main/res/layout/dialog_my_clothes_size.xml
+++ b/app/src/main/res/layout/dialog_my_clothes_size.xml
@@ -18,7 +18,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="238dp"
+            app:srcCompat="@drawable/size" />
+
         <TextView
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_bold"
@@ -54,62 +61,10 @@
             android:maxLines="1"
             android:textColor="@color/black" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_bold"
-            android:text="카테고리를 선택해주세요."
-            android:textColor="#444444" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/hood_tv"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/select_round_corner"
-                android:fontFamily="@font/noto_sans_bold"
-                android:gravity="center"
-                android:text="HOOD"
-                android:textSize="10dp" />
-
-            <TextView
-                android:id="@+id/pants_tv"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/select_round_corner"
-                android:fontFamily="@font/noto_sans_bold"
-                android:gravity="center"
-                android:text="PANTS"
-                android:textSize="10dp" />
-
-            <TextView
-                android:id="@+id/t_shirt_tv"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/select_round_corner"
-                android:fontFamily="@font/noto_sans_bold"
-                android:gravity="center"
-                android:text="T-SHIRT"
-                android:textSize="10dp" />
-
-            <TextView
-                android:id="@+id/outer_tv"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:background="@drawable/select_round_corner"
-                android:fontFamily="@font/noto_sans_bold"
-                android:gravity="center"
-                android:text="OUTER"
-                android:textSize="10dp" />
-
-        </LinearLayout>
+            android:orientation="horizontal"/>
 
     </LinearLayout>
 
