--- a/app/src/main/res/layout/activity_my_clothes.xml
+++ b/app/src/main/res/layout/activity_my_clothes.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/theme_color"
     tools:context=".view.main.setting.MyClothesActivity">
 
     <include
@@ -35,31 +36,66 @@
                 android:id="@+id/layout_shirt"
                 layout="@layout/layout_clothes_list"
                 android:layout_width="match_parent"
-                android:layout_height="120dp" />
+                android:layout_height="120dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <include
                 android:id="@+id/layout_hood"
                 layout="@layout/layout_clothes_list"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <include
                 android:id="@+id/layout_overcoat"
                 layout="@layout/layout_clothes_list"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <include
                 android:id="@+id/layout_pants"
                 layout="@layout/layout_clothes_list"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:layout_marginTop="10dp" />
-
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
 
+    <include
+        android:id="@+id/loading_bar"
+        layout="@layout/layout_loading_progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/not_network_layout"
+        layout="@layout/layout_no_network_available"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/tv_none_data"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/noto_regular"
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:text="담아둔 옷이 아직 없습니다.\n옷을 담아주세요."
+        android:textColor="@android:color/darker_gray"
+        android:textSize="20dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_layout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
